force-app/main/default/objects/Apttus_Config2__PriceRule__c/fields/Apttus_Config2__AdjustmentAppliesTo__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AdjustmentAppliesTo__c</fullName>
    <description>Indicates the price field the adjustment should be applied to. Not applicable to price override adjustments.</description>
    <inlineHelpText>Value of this field controls which price point the adjustments are applied to. For example, whether the price discounts are applied to the list price, or net price.</inlineHelpText>
    <label>Adjustment Applies To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Base Price</fullName>
                <default>true</default>
                <label>Base Price</label>
            </value>
            <value>
                <fullName>List Price</fullName>
            </value>
            <value>
                <fullName>Base Extended Price</fullName>
            </value>
            <value>
                <fullName>Extended Price</fullName>
            </value>
            <value>
                <fullName>Custom Price Point</fullName>
            </value>
            <value>
                <fullName>Previous</fullName>
            </value>
            <value>
                <fullName>Prior Price Point</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>