force-app/main/default/objects/Apttus_Config2__PriceRule__c/fields/Apttus_Config2__AdjustmentChargeType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AdjustmentChargeType__c</fullName>
    <description>The adjustment charge type. Used to create Aggregate line items.</description>
    <label>Adjustment Charge Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adjustment</fullName>
                <default>true</default>
                <label>Adjustment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>