force-app/main/default/objects/Apttus_Config2__PriceRule__c/fields/Apttus_Config2__AllowRemovalOfAdjustment__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AllowRemovalOfAdjustment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether user is allowed to remove the aggregate  adjustment</description>
    <label>Allow Removal Of Adjustment</label>
    <type>Checkbox</type>
</CustomField>