force-app/main/default/objects/Apttus_Config2__PriceRule__c/fields/Apttus_Config2__ApplicationMethod__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ApplicationMethod__c</fullName>
    <description>The rule application method. This field is deprecated. The Application method is moved to the Price Ruleset..</description>
    <label>Application Method (Deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aggregate</fullName>
            </value>
            <value>
                <fullName>Allocate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>