force-app/main/default/objects/Apttus_Config2__PriceRule__c/fields/Apttus_Config2__BeneficiaryType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BeneficiaryType__c</fullName>
    <description>The beneficiary type</description>
    <inlineHelpText>The beneficiary type</inlineHelpText>
    <label>Beneficiary Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>