force-app/main/default/objects/Apttus_Config2__PriceRule__c/fields/Apttus_Config2__BenefitType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BenefitType__c</fullName>
    <description>The rule benefit type</description>
    <inlineHelpText>The rule benefit type</inlineHelpText>
    <label>Benefit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Price Only</fullName>
                <default>true</default>
                <label>Price Only</label>
            </value>
            <value>
                <fullName>Price and Quantity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>