force-app/main/default/objects/Apttus_Config2__PriceRule__c/fields/Apttus_Config2__ChargeTypeCriteria__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ChargeTypeCriteria__c</fullName>
    <description>One or more charge type inclusion/exclusion criteria</description>
    <inlineHelpText>One or more charge type inclusion/exclusion criteria</inlineHelpText>
    <label>Charge Type Criteria</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>