force-app/main/default/objects/Apttus_Config2__PriceRule__c/fields/Apttus_Config2__CountryCriteriaOper__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CountryCriteriaOper__c</fullName>
    <description>The country criteria operator</description>
    <inlineHelpText>The country criteria operator</inlineHelpText>
    <label>Country Criteria Oper</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>in</fullName>
            </value>
            <value>
                <fullName>not in</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>