force-app/main/default/objects/Apttus_Config2__PriceRule__c/fields/Apttus_Config2__CustomPricePointSource__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CustomPricePointSource__c</fullName>
    <description>Indicates the source field in the business object which holds the custom price point value</description>
    <inlineHelpText>Indicates the source field in the business object which holds the custom price point value</inlineHelpText>
    <label>Custom Price Point Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>