force-app/main/default/objects/Apttus_Config2__PriceRule__c/fields/Apttus_Config2__Dimension1Id__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Dimension1Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the first dimension. Only applicable to Dimension rules.</description>
    <label>Dimension 1</label>
    <referenceTo>Apttus_Config2__PriceDimension__c</referenceTo>
    <relationshipLabel>Price Rules (Dimension 1)</relationshipLabel>
    <relationshipName>PriceRules</relationshipName>
    <type>Lookup</type>
</CustomField>