force-app/main/default/objects/Apttus_Config2__PriceRule__c/fields/Apttus_Config2__Dimension2Id__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Dimension2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the second dimension. Only applicable to Dimension rules.</description>
    <label>Dimension 2</label>
    <referenceTo>Apttus_Config2__PriceDimension__c</referenceTo>
    <relationshipLabel>Price Rules (Dimension 2)</relationshipLabel>
    <relationshipName>PriceRules2</relationshipName>
    <type>Lookup</type>
</CustomField>