force-app/main/default/objects/Apttus_Config2__PriceRule__c/fields/Apttus_Config2__Dimension2ValueType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Dimension2ValueType__c</fullName>
    <description>The value type of the second dimension. Only applicable to Dimension rules.</description>
    <label>Dimension 2 Value Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Discrete</fullName>
            </value>
            <value>
                <fullName>Range</fullName>
            </value>
            <value>
                <fullName>Weighted Range</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>