force-app/main/default/objects/Apttus_Config2__PriceRule__c/fields/Apttus_Config2__Dimension4ValueType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Dimension4ValueType__c</fullName>
    <description>The value type of the fourth dimension. Only applicable to Dimension rules.</description>
    <inlineHelpText>1.HIGHEST TIER RATE:  Same rate for all txns per highest tier  E.g. Tier table 1-100 - $5, 101-500 - $10. Qty purchased 450. Rebate = 450*$10 = $4,500
2. RATE PER EACH TIER:  E.g. For 450 Qty with above Tier Table. Rebate = 100*$5 + 350*$10=$4,000</inlineHelpText>
    <label>Dimension 4 Value Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Discrete</fullName>
            </value>
            <value>
                <fullName>Range</fullName>
            </value>
            <value>
                <fullName>Highest Tier Rate</fullName>
            </value>
            <value>
                <fullName>Rate Per Each Tier</fullName>
            </value>
            <value>
                <fullName>Cumulative Tier</fullName>
            </value>
            <value>
                <fullName>List</fullName>
            </value>
            <value>
                <fullName>Weighted Range</fullName>
            </value>
            <value>
                <fullName>Waterfall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>