force-app/main/default/objects/Apttus_Config2__PriceRule__c/fields/Apttus_Config2__ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ExpirationDate__c</fullName>
    <description>The rule or benefit expiration date. The rule or benefit is no longer applicable after this date. It may also indicate the end date for a price ramp.</description>
    <inlineHelpText>The rule or benefit expiration date. The rule or benefit is no longer applicable after this date. It may also indicate the end date for a price ramp.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>