force-app/main/default/objects/Apttus_Config2__PriceRule__c/fields/Apttus_Config2__ForEveryXCriteriaDimensionId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ForEveryXCriteriaDimensionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the For Every X Criteria Dimension</description>
    <inlineHelpText>ID of the For Every X Criteria Dimension</inlineHelpText>
    <label>For Every X Criteria Dimension</label>
    <referenceTo>Apttus_Config2__PriceDimension__c</referenceTo>
    <relationshipLabel>Price Rules</relationshipLabel>
    <relationshipName>PriceRulesForEveryX</relationshipName>
    <type>Lookup</type>
</CustomField>