force-app/main/default/objects/Apttus_Config2__PriceRule__c/fields/Apttus_Config2__ForEveryXCriteriaDimensionType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ForEveryXCriteriaDimensionType__c</fullName>
    <description>The type associated with the For Every X criteria dimension</description>
    <inlineHelpText>The type associated with the For Every X criteria dimension</inlineHelpText>
    <label>For Every X Criteria Dimension Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quantity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>