force-app/main/default/objects/Apttus_Config2__PriceRule__c/fields/Apttus_Config2__FutureBenefitValidityOffset__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__FutureBenefitValidityOffset__c</fullName>
    <description>The offset to establish the validity period of a future benefit. Only applicable to incentive rules.</description>
    <inlineHelpText>The offset to establish the validity period of a future benefit. Only applicable to incentive rules.</inlineHelpText>
    <label>Future Benefit Validity Offset</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>