force-app/main/default/objects/Apttus_Config2__PriceRule__c/fields/Apttus_Config2__FutureBenefitValidityType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__FutureBenefitValidityType__c</fullName>
    <description>Establishes the validity period of a future benefit. Only applicable to incentive rules.</description>
    <inlineHelpText>Establishes the validity period of a future benefit. Only applicable to incentive rules.</inlineHelpText>
    <label>Future Benefit Validity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Incentive End Date</fullName>
            </value>
            <value>
                <fullName>Within X Days</fullName>
            </value>
            <value>
                <fullName>Within X Months</fullName>
            </value>
            <value>
                <fullName>Within Calendar Month</fullName>
            </value>
            <value>
                <fullName>Within Calendar Quarter</fullName>
            </value>
            <value>
                <fullName>Within Calendar Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>