force-app/main/default/objects/Apttus_Config2__PriceRule__c/fields/Apttus_Config2__MetricValueSource__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MetricValueSource__c</fullName>
    <description>The data source which provides the value for the rate table metric.</description>
    <inlineHelpText>Fields from the transaction records that represent volume or revenue 
1.	VOLUME:  Generally represented by the standard field “Quantity” 
2.	REVENUE: Generally represented by the standard field “Net Price”.  However,  can also use other fields</inlineHelpText>
    <label>Metric Value Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>