force-app/main/default/objects/Apttus_Config2__PriceRule__c/fields/Apttus_Config2__MilestoneStatusCriteria__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MilestoneStatusCriteria__c</fullName>
    <description>One or more milestone status inclusion/exclusion criteria</description>
    <inlineHelpText>One or more milestone status inclusion/exclusion criteria</inlineHelpText>
    <label>Milestone Status Criteria</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>