force-app/main/default/objects/Apttus_Config2__PriceRule__c/fields/Apttus_Config2__ProductCriteria__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductCriteria__c</fullName>
    <description>One or more product inclusion/exclusion criteria</description>
    <inlineHelpText>One or more product inclusion/exclusion criteria</inlineHelpText>
    <label>Product Criteria</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>