force-app/main/default/objects/Apttus_Config2__PriceRule__c/fields/Apttus_Config2__ProductCriteriaOper__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductCriteriaOper__c</fullName>
    <description>The product criteria operator</description>
    <inlineHelpText>The product criteria operator</inlineHelpText>
    <label>Product Criteria Oper</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>in</fullName>
            </value>
            <value>
                <fullName>all</fullName>
            </value>
            <value>
                <fullName>all in bundle</fullName>
            </value>
            <value>
                <fullName>not in</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>