force-app/main/default/objects/Apttus_Config2__PriceRule__c/fields/Apttus_Config2__ProductFamilyCriteriaOper__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductFamilyCriteriaOper__c</fullName>
    <description>The product family criteria operator</description>
    <inlineHelpText>The product family criteria operator</inlineHelpText>
    <label>Product Family Criteria Oper</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>in</fullName>
            </value>
            <value>
                <fullName>not in</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>