force-app/main/default/objects/Apttus_Config2__PriceRule__c/fields/Apttus_Config2__RulesetId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RulesetId__c</fullName>
    <description>ID of the associated rule set</description>
    <label>Ruleset</label>
    <referenceTo>Apttus_Config2__PriceRuleset__c</referenceTo>
    <relationshipLabel>Rules</relationshipLabel>
    <relationshipName>Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>