force-app/main/default/objects/Apttus_Config2__PriceRule__c/fields/Apttus_Config2__RuleSubType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RuleSubType__c</fullName>
    <description>The rule subtype</description>
    <inlineHelpText>The rule subtype</inlineHelpText>
    <label>Rule Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Benefit</fullName>
            </value>
            <value>
                <fullName>Deduction</fullName>
            </value>
            <value>
                <fullName>Point Accrual</fullName>
            </value>
            <value>
                <fullName>Key Factor</fullName>
            </value>
            <value>
                <fullName>KPI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>