force-app/main/default/objects/Apttus_Config2__PriceRule__c/fields/Apttus_Config2__TierMetricRollupDuration__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__TierMetricRollupDuration__c</fullName>
    <description>Indicates the frequency for auto created rollup of the tiered metric value</description>
    <inlineHelpText>Period over which the tier metric is aggregated. No rollup means the tier metric is based on value from individual transaction only.</inlineHelpText>
    <label>Tier Metric Rollup Duration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Rollup</fullName>
                <default>true</default>
                <label>No Rollup</label>
            </value>
            <value>
                <fullName>Rebate Payout Period</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Half Yearly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Incentive Period</fullName>
            </value>
            <value>
                <fullName>Incentive Lifetime</fullName>
            </value>
            <value>
                <fullName>Custom Rollup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>