force-app/main/default/objects/Apttus_Config2__PriceRule__c/fields/Apttus_Config2__TierMetricType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__TierMetricType__c</fullName>
    <description>The type of metric associated with rate table tiers</description>
    <inlineHelpText>The value of this field controls which metric to be used to qualify for tiers. &amp;#10;VOLUME: quantities are used to qualify for tiers. &amp;#10;REVENUE: order or invoice amount is used to qualify for tiers.</inlineHelpText>
    <label>Tier Metric Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Volume</fullName>
            </value>
            <value>
                <fullName>Volume tiers with Dates</fullName>
            </value>
            <value>
                <fullName>Revenue</fullName>
            </value>
            <value>
                <fullName>Revenue tiers with Dates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>