force-app/main/default/objects/Apttus_Config2__PriceRule__c/fields/Apttus_Config2__WaterfallMetricFieldName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__WaterfallMetricFieldName__c</fullName>
    <description>Name of the LineItem field used as a Price Waterfall Metric</description>
    <inlineHelpText>Name of the LineItem field used as a Price Waterfall Metric</inlineHelpText>
    <label>Price Waterfall Metric Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>